<resources>
    <string name="app_name">Cardczar</string>

    <string name="hello_world">This is the default for new activities.  Don\'t delete.</string>

    <!-- Main -->
    <string name="action_settings">Settings</string>
    <string name="joinButtonText">Join Game</string>
    <string name="hostButtonText">Host Game</string>

    <!-- HostStart -->
    <string name="title_activity_host_start">HostStartActivity</string>
    <string name="roomnameTextViewText">Choose a room name. \n You\'ll need to give this to users. </string>
    <string name="roomnameEditTextText">12345678</string>
    <string name="hostnameTextViewText">Enter your username</string>
    <string name="hostnameEditTextText">host</string>
    <string name="hostStartButtonText">Start Room</string>

    <!-- UserStart -->
    <string name="title_activity_user_start">UserStartActivity</string>
    <string name="roomJoinTextViewText">Enter room name</string>
    <string name="roomJoinEditTextText">12345678</string>
    <string name="usernameTextViewText">Enter your username</string>
    <string name="usernameEditTextText">user</string>
    <string name="userStartButtonText">Join Game</string>
    <string name="roomStatusTextViewText">No status from server</string>

    <!-- Room -->
    <string name="title_activity_room">RoomActivity</string>
    <string name="userListTextViewText">User list here.</string>
    <string name="refreshUsersButtonText">Refresh</string>
    <string name="gameStartButtonText">Start</string>

    <!-- Gameplay -->
    <string name="title_activity_gameplay">GameplayActivity</string>



</resources>
