<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.crimson30.cardczar.UserStartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/roomJoinTextViewText"
        android:id="@+id/roomJoinTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/roomJoinEditText"
        android:layout_below="@+id/roomJoinTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/roomJoinEditTextText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/usernameTextViewText"
        android:id="@+id/usernameTextView"
        android:layout_below="@+id/roomJoinEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameEditText"
        android:layout_below="@+id/usernameTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/usernameEditTextText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userStartButtonText"
        android:id="@+id/userStartButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/roomStatusTextViewText"
        android:id="@+id/roomStatusTextView"
        android:layout_below="@+id/userStartButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp" />
</RelativeLayout>
